SwipeDelegate: fix broken swiping after calling SwipeDelegate.close()

Reset the internal state when close() is called to ensure that it's
consistent.

Task-number: QTBUG-57243
Change-Id: Id52724e0eb296c3f8a4fc0a0587a04558b1d1ab6
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>